=== master

Fix rendering flaws in Demo forms, add CHANGELOG (akuzko)

=== 1.0.0