@@ -1,1 +1,2 @@
 export default from './components/Form';
+export bindState from './utils';
