@@ -1,6 +1,13 @@
 import isArray from 'lodash/isArray';
 import isPlainObject from 'lodash/isPlainObject';
 
+export function bindState(component, key = 'form') {
+  return {
+    attrs: (component.state && component.state[key]) || {},
+    onChange: function(attrs) { return component.setState({ [key]: attrs }) }
+  };
+}
+
 export function nameToPath(name) {
   return name.replace(/\.(\d+)(\.)?/g, (_match, i, dot) => `[${i}]` + (dot ? '.' : ''));
 }
