@@ -1,5 +1,7 @@
 === master
 
+Add bindState helper method, improve Form props (akuzko)
+
 Fix rendering flaws in Demo forms, add CHANGELOG (akuzko)
 
 === 1.0.0
